Add gross and net amount
