# openapi/Autodor.OpenApi.json
@@ -1152,6 +1152,8 @@
           "date",
           "person",
           "customerNumber",
+          "netAmount",
+          "grossAmount",
           "items",
           "isExcluded"
         ],
@@ -1181,6 +1183,22 @@
               "null",
               "string"
             ]
+          },
+          "netAmount": {
+            "pattern": "^-?(?:0|[1-9]\\d*)(?:\\.\\d+)?$",
+            "type": [
+              "number",
+              "string"
+            ],
+            "format": "double"
+          },
+          "grossAmount": {
+            "pattern": "^-?(?:0|[1-9]\\d*)(?:\\.\\d+)?$",
+            "type": [
+              "number",
+              "string"
+            ],
+            "format": "double"
           },
           "items": {
             "type": "array",
@@ -1309,7 +1327,8 @@
           "person",
           "customerNumber",
           "itemsCount",
-          "totalAmount",
+          "netAmount",
+          "grossAmount",
           "isExcluded",
           "excludedItemsCount"
         ],
@@ -1348,7 +1367,15 @@
             ],
             "format": "int32"
           },
-          "totalAmount": {
+          "netAmount": {
+            "pattern": "^-?(?:0|[1-9]\\d*)(?:\\.\\d+)?$",
+            "type": [
+              "number",
+              "string"
+            ],
+            "format": "double"
+          },
+          "grossAmount": {
             "pattern": "^-?(?:0|[1-9]\\d*)(?:\\.\\d+)?$",
             "type": [
               "number",
